# jupyterlab-claude-code

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPARISON.md  README.md  TESTING.md  package.json  pyproject.toml  ruff.toml
src/: helpers.test.ts  helpers.ts  index.ts
