[project]
name = "jupyterlab-claude-code-monorepo"
version = "0.1.0"
description = "JupyterLab + Claude Code integration via MCP"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Ian" }]

[dependency-groups]
dev = [
    "pre-commit>=3.6.0",
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
jupyterlab-claude-mcp = { workspace = true }
jupyterlab-claude-code = { workspace = true }
